// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__WrapperOuter-sc-19tlhp4-0 JiNzU"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__Body-sc-19tlhp4-3 iPUXIc"
    height={null}
    id={null}
    overflow={null}
    width={null}
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 iryQpt Layout__WrapperMain-sc-19tlhp4-5 hBWDkI"
      height="20rem"
      id={null}
      overflow={null}
      width="100%"
    >
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 eeLHbF Layout__RegionCenter-sc-19tlhp4-6 kIUOgp"
        height={null}
        id="Main"
        overflow={null}
        width={null}
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[` 2`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__WrapperOuter-sc-19tlhp4-0 JiNzU"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__Body-sc-19tlhp4-3 iPUXIc"
    height={null}
    id={null}
    overflow={null}
    width={null}
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 cWGAaP Layout__RegionLeft-sc-19tlhp4-4 bFSzYz"
      height={null}
      id="Left"
      overflow={null}
      width="10rem"
    >
      
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 faLMAB Layout__WrapperMain-sc-19tlhp4-5 hBWDkI"
      height="20rem"
      id={null}
      overflow={null}
      width="calc(calc(100% - 10rem) - 24rem)"
    >
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 eeLHbF Layout__RegionCenter-sc-19tlhp4-6 kIUOgp"
        height={null}
        id="Main"
        overflow={null}
        width={null}
      >
        
      </div>
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 jkLZgg Layout__RegionRight-sc-19tlhp4-8 hiwLem"
      height={null}
      id="Right"
      overflow={null}
      width="24rem"
    >
      
    </div>
  </div>
</div>
`;

exports[` 3`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__WrapperOuter-sc-19tlhp4-0 JiNzU"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__Body-sc-19tlhp4-3 iPUXIc"
    height={null}
    id={null}
    overflow={null}
    width={null}
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 cWGAaP Layout__RegionLeft-sc-19tlhp4-4 bFSzYz"
      height={null}
      id="Left"
      overflow={null}
      width="10rem"
    >
      
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 faLMAB Layout__WrapperMain-sc-19tlhp4-5 hBWDkI"
      height="20rem"
      id={null}
      overflow={null}
      width="calc(calc(100% - 10rem) - 24rem)"
    >
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 hGiOHx Layout__RegionCenter-sc-19tlhp4-6 kIUOgp"
        height={null}
        id="Main"
        overflow={null}
        width={null}
      >
        
      </div>
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 jIhJpo Layout__RegionBottom-sc-19tlhp4-7 kumGNs"
        height="20rem"
        id="Bottom"
        overflow={null}
        width={null}
      >
        
      </div>
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 jkLZgg Layout__RegionRight-sc-19tlhp4-8 hiwLem"
      height={null}
      id="Right"
      overflow={null}
      width="24rem"
    >
      
    </div>
  </div>
</div>
`;

exports[` 4`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__WrapperOuter-sc-19tlhp4-0 JiNzU"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 jpGTKs Layout__Header-sc-19tlhp4-1 blbSTQ"
    height={null}
    id="Header"
    overflow={null}
    width={null}
  >
    
  </div>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__Body-sc-19tlhp4-3 iPUXIc"
    height={null}
    id={null}
    overflow={null}
    width={null}
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 cWGAaP Layout__RegionLeft-sc-19tlhp4-4 bFSzYz"
      height={null}
      id="Left"
      overflow={null}
      width="10rem"
    >
      
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 faLMAB Layout__WrapperMain-sc-19tlhp4-5 hBWDkI"
      height="20rem"
      id={null}
      overflow={null}
      width="calc(calc(100% - 10rem) - 24rem)"
    >
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 hGiOHx Layout__RegionCenter-sc-19tlhp4-6 kIUOgp"
        height={null}
        id="Main"
        overflow={null}
        width={null}
      >
        
      </div>
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 jIhJpo Layout__RegionBottom-sc-19tlhp4-7 kumGNs"
        height="20rem"
        id="Bottom"
        overflow={null}
        width={null}
      >
        
      </div>
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 jkLZgg Layout__RegionRight-sc-19tlhp4-8 hiwLem"
      height={null}
      id="Right"
      overflow={null}
      width="24rem"
    >
      
    </div>
  </div>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 jpGTKs Layout__Footer-sc-19tlhp4-2 fgYxpX"
    height={null}
    id="Footer"
    overflow={null}
    width={null}
  >
    
  </div>
</div>
`;

exports[` 5`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__WrapperOuter-sc-19tlhp4-0 JiNzU"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 jpGTKs Layout__Header-sc-19tlhp4-1 blbSTQ"
    height={null}
    id="Header"
    overflow={null}
    width={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 eIFIfS"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <a
          className="Command__CommandContainer-sc-13akgtp-0 fUWwiV"
          id={null}
          label="Toggle"
          onClick={[Function]}
          title="Toggle"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-left fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
            color={null}
            data-icon="angle-left"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.2 247.5L151 99.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17L69.3 256l118.5 119.7c4.7 4.7 4.7 12.3 0 17L168 412.5c-4.7 4.7-12.3 4.7-17 0L4.2 264.5c-4.7-4.7-4.7-12.3 0-17z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
            fontSize="0.879em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0.4px"
          >
            Toggle
          </label>
        </a>
      </div>
      <div
        className="Bar__Slot-icfo76-1 hVtzoz"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gDyDyY"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Header
        </h6>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <a
          className="Command__CommandContainer-sc-13akgtp-0 jSZvNZ"
          id={null}
          label="Toggle"
          onClick={[Function]}
          title="Toggle"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-right fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
            color={null}
            data-icon="angle-right"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M187.8 264.5L41 412.5c-4.7 4.7-12.3 4.7-17 0L4.2 392.7c-4.7-4.7-4.7-12.3 0-17L122.7 256 4.2 136.3c-4.7-4.7-4.7-12.3 0-17L24 99.5c4.7-4.7 12.3-4.7 17 0l146.8 148c4.7 4.7 4.7 12.3 0 17z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
            fontSize="0.879em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0.4px"
          >
            Toggle
          </label>
        </a>
      </div>
    </div>
  </div>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__Body-sc-19tlhp4-3 iPUXIc"
    height={null}
    id={null}
    overflow={null}
    width={null}
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 cWGAaP Layout__RegionLeft-sc-19tlhp4-4 eoAyiI"
      height={null}
      id={null}
      overflow={null}
      width="10rem"
    >
      
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 dJGSkh Layout__WrapperMain-sc-19tlhp4-5 hBWDkI"
      height="20rem"
      id={null}
      overflow={null}
      width="100%"
    >
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 eeLHbF Layout__RegionCenter-sc-19tlhp4-6 kIUOgp"
        height={null}
        id={null}
        overflow={null}
        width={null}
      >
        
      </div>
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 jIhJpo Layout__RegionBottom-sc-19tlhp4-7 feYNea"
        height="20rem"
        id={null}
        overflow={null}
        width={null}
      >
        
      </div>
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 jkLZgg Layout__RegionRight-sc-19tlhp4-8 gLaegA"
      height={null}
      id={null}
      overflow={null}
      width="24rem"
    >
      
    </div>
  </div>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 jpGTKs Layout__Footer-sc-19tlhp4-2 fgYxpX"
    height={null}
    id="Footer"
    overflow={null}
    width={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 eIFIfS"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gDyDyY"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Footer
        </h6>
      </div>
      <div
        className="Bar__Slot-icfo76-1 hVtzoz"
      >
        <a
          className="Command__CommandContainer-sc-13akgtp-0 fUWwiV"
          id={null}
          label="Toggle"
          onClick={[Function]}
          title="Toggle"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
            color={null}
            data-icon="angle-down"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
            fontSize="0.879em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0.4px"
          >
            Toggle
          </label>
        </a>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[` 6`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__WrapperOuter-sc-19tlhp4-0 JiNzU"
  height={null}
  id={null}
  overflow={null}
  width={null}
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 jpGTKs Layout__Header-sc-19tlhp4-1 blbSTQ"
    height={null}
    id="Header"
    overflow={null}
    width={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 eIFIfS"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <a
          className="Command__CommandContainer-sc-13akgtp-0 fUWwiV"
          id={null}
          label="Toggle"
          onClick={[Function]}
          title="Toggle"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-left fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
            color={null}
            data-icon="angle-left"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.2 247.5L151 99.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17L69.3 256l118.5 119.7c4.7 4.7 4.7 12.3 0 17L168 412.5c-4.7 4.7-12.3 4.7-17 0L4.2 264.5c-4.7-4.7-4.7-12.3 0-17z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
            fontSize="0.879em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0.4px"
          >
            Toggle
          </label>
        </a>
      </div>
      <div
        className="Bar__Slot-icfo76-1 hVtzoz"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gDyDyY"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Header
        </h6>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <a
          className="Command__CommandContainer-sc-13akgtp-0 jSZvNZ"
          id={null}
          label="Toggle"
          onClick={[Function]}
          title="Toggle"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-right fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
            color={null}
            data-icon="angle-right"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M187.8 264.5L41 412.5c-4.7 4.7-12.3 4.7-17 0L4.2 392.7c-4.7-4.7-4.7-12.3 0-17L122.7 256 4.2 136.3c-4.7-4.7-4.7-12.3 0-17L24 99.5c4.7-4.7 12.3-4.7 17 0l146.8 148c4.7 4.7 4.7 12.3 0 17z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
            fontSize="0.879em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0.4px"
          >
            Toggle
          </label>
        </a>
      </div>
    </div>
  </div>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 fwrFdN Layout__Body-sc-19tlhp4-3 iPUXIc"
    height={null}
    id={null}
    overflow={null}
    width={null}
  >
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 cWGAaP Layout__RegionLeft-sc-19tlhp4-4 eoAyiI"
      height={null}
      id={null}
      overflow={null}
      width="10rem"
    >
      
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 dJGSkh Layout__WrapperMain-sc-19tlhp4-5 hBWDkI"
      height="20rem"
      id={null}
      overflow={null}
      width="100%"
    >
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 eeLHbF Layout__RegionCenter-sc-19tlhp4-6 kIUOgp"
        height={null}
        id={null}
        overflow={null}
        width={null}
      >
        
      </div>
      <div
        className="Flex__FlexWrapper-sc-7b3s7m-0 jIhJpo Layout__RegionBottom-sc-19tlhp4-7 feYNea"
        height="20rem"
        id={null}
        overflow={null}
        width={null}
      >
        
      </div>
    </div>
    <div
      className="Flex__FlexWrapper-sc-7b3s7m-0 jkLZgg Layout__RegionRight-sc-19tlhp4-8 gLaegA"
      height={null}
      id={null}
      overflow={null}
      width="24rem"
    >
      
    </div>
  </div>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 jpGTKs Layout__Footer-sc-19tlhp4-2 fgYxpX"
    height={null}
    id="Footer"
    overflow={null}
    width={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 eIFIfS"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gDyDyY"
          fontSize="1em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Footer
        </h6>
      </div>
      <div
        className="Bar__Slot-icfo76-1 hVtzoz"
      >
        <a
          className="Command__CommandContainer-sc-13akgtp-0 fUWwiV"
          id={null}
          label="Toggle"
          onClick={[Function]}
          title="Toggle"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-angle-down fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD Command__CommandIcon-sc-13akgtp-2 kHbmnU"
            color={null}
            data-icon="angle-down"
            data-prefix="far"
            focusable="false"
            fontSize="inherit"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
          <label
            className="Typography__StyledLabel-sc-19auepv-0 hskbRy Command__CommandName-sc-13akgtp-1 RLnA-D"
            fontSize="0.879em"
            fontWeight={400}
            htmlFor={null}
            letterSpacing="0.4px"
          >
            Toggle
          </label>
        </a>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
